--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/EAD?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=llallinni6067
 
