--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/EAD?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ead?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=llallinni6067
 
